Making two small changes to the lab8 assignment.

--- a/labs/lab8/cs380F2014-lab8.tex
+++ b/labs/lab8/cs380F2014-lab8.tex
@@ -30,7 +30,7 @@ DOM-based solutions that are available and to ensure that you understand some fu
 using our chosen DOM parser, you should also read \url{https://docs.oracle.com/javase/tutorial/jaxp/dom/when.html}.
 
 \vspace*{-.05in}
-\section*{Simple DOM-Based Parsing of XML}
+\section*{Trying Simple DOM-Based Parsing of XML}
 
 You and your partner should create a Git repository, using Bitbucket, that you can use to complete this laboratory
 assignment.  To start off this project, one of you should go into the ``share'' repository for this course and run the
@@ -80,10 +80,10 @@ any questions about the deliverables that you must turn in for this laboratory a
   \setlength{\itemsep}{0pt}
   \item A two paragraph commentary on the work that each team member completed. 
   \item A description of DOM-based XML parsing, examining its features, strengths, and weaknesses.
-  \item A discussion of how normalization can influence the output of a DOM-based XML parser.
   \item The final version of the {\tt staff.xml} XML file that you customized and extended as appropriate.
   \item The output from running the {\tt ReadXMLFileWithDOM} program with both of the XML files.
   \item The output from running the {\tt DOMEcho} program with both of the provided XML files.
+  \item The source code of the {\tt DOMEcho} program that you enhanced to produce less debugging output.
   \item Snippets of the five XML files and the output from running the enhanced {\tt DOMEcho} program.
   \item A report explaining the performance trends associated with DOM-based XML parsing.
 \end{enumerate}
