--- a/exams/exam2.tex
+++ b/exams/exam2.tex
@@ -142,32 +142,27 @@
 
             \newpage
 
-          \item ({\bf 10 Points}) Relational databases contain several advanced
-            features that support the implementation of complex schemas.  Answer
-            the following questions about some advanced features supported by
-            many database management systems.
+          \item ({\bf 10 Points}) Relational databases contain several advanced features that support the implementation
+            of complex schemas.  Answer the following questions about some advanced features supported by many database
+            management systems.
 
             \begin{enumerate}
 
-              \item ({\bf 3 Points}) What is {\em meta-data}?  How does the Java
-                Database Connectivity (JDBC) interface support the collection and
-                access of meta-data?  
+              \item ({\bf 3 Points}) What is {\em meta-data}?  How does the Java Database Connectivity (JDBC) interface
+                support the collection and access of meta-data?  How does the eXtensible markup language (XML)
+                facilitate the inclusion of meta-data?
 
                 %% How does a relational database management system (RDBMS) handle
                 %% meta-data?  What type of meta-data does an RDBMS collect?
 
-                \item ({\bf 5 Points}) What is a database {\em trigger}?  Please
-                  describe a circumstance in which it would be valuable to use
-                  triggers.  Finally, identify a situation in which it would not be
-                  appropriate to use triggers.  As part of your answer, you must
-                  carefully explain why it would or would not be wise to use
-                  triggers.  Whenever possible, your response should include
-                  diagrams and/or concrete examples.
+                \item ({\bf 5 Points}) What is a database {\em trigger}?  Please describe a circumstance in which it
+                  would be valuable to use triggers.  Finally, identify a situation in which it would not be appropriate
+                  to use triggers.  As part of your answer, you must carefully explain why it would or would not be wise
+                  to use triggers.  Whenever possible, your response should include diagrams and/or concrete examples.
 
-                \item ({\bf 2 Points}) A relational database can store {\bf null}
-                  values.  What is the meaning of a {\bf null} in a database?  How
-                  is this meaning different than the understanding of a {\tt null}
-                  variable inside of a Java program?
+                \item ({\bf 2 Points}) A relational database can store {\bf null} values.  What is the meaning of a {\bf
+                  null} in a database?  How is this meaning different than the understanding of a variable
+                  in a Java program that contains the value of {\tt null}?
 
               \end{enumerate}
 
@@ -231,7 +226,7 @@
                   \texttt{~~ARRIVE\_TIME~~~~~~TIME,}                                    \\
                   \texttt{~~MEAL  ~~~~~~~~~~~~CHAR(1),}                                 \\
                   \texttt{~~\textbf{PRIMARY KEY(FLIGHT\_ID, SEGMENT\_NUMBER)},}         \\
-                  \texttt{~~\textbf{CHECK(MEAL IN ('B', 'L', 'D', 'S'))}}               \\
+                  \texttt{~~\textbf{CHECK(MEAL IN (`B', `L', `D', `S'))}}               \\
                   \texttt{);} \vspace{2mm}                                              \\                                                                    
                   \texttt{CREATE TABLE FlightAvailable (}                               \\
                   \texttt{~~FLIGHT\_ID~~~~~~~~~~~~~~CHAR(6) \textbf{NOT NULL,}}         \\
