Finished a first pass through the entire examination.

--- a/exams/exam2.tex
+++ b/exams/exam2.tex
@@ -246,39 +246,36 @@
 
               \newpage
 
-            \item ({\bf 10 Points}) You must consider security and performance
-              when you are using a data management system.  Answer the following
-              questions about these important areas.
+            \item ({\bf 10 Points}) You must consider security and performance when you are using a data management
+              system.  Answer the following questions about these important areas.
 
               \begin{enumerate}
 
-                \item ({\bf 4 Points}) What is the meaning of the abbreviation
-                  HTTP?  What is the meaning of HTML? How are these technologies
-                  used to implement database applications?
+                % \item ({\bf 4 Points}) What is the meaning of the abbreviation HTTP?  What is the meaning of HTML? How
+                %   are these technologies used to implement database applications?
 
                   %% Is HTTP a connection-oriented or a connection-less
                   %%       protocol?  How does the choice of connection-oriented or
                   %%       connection-less protocols impact the performance of a Web
                   %%       application?  
 
-                  \item ({\bf 3 Points}) Many Web servers attempt to store cookies
-                    in a Web browser.  What is a cookie and why does a server store
-                    it in a Web browser?  What are the performance and security
-                    issues that must be managed when it comes to the storage of
-                    cookies?  Your response to this question should furnish at least
-                    one performance concern and at least one security issue.
+                  \item ({\bf 3 Points}) Many Web servers attempt to store cookies in a Web browser.  What is a cookie
+                    and why does a server store it in a Web browser?  What are the performance and security issues that
+                    must be managed when it comes to the storage of cookies?  Your response to this question should
+                    furnish at least one performance concern and at least one security issue.
 
-                  \item ({\bf 3 Points}) The Java database connectivity (JDBC) interface
-                    furnishes the ability to create and submit a {\em prepared
-                    statement}.  Furthermore, JDBC also enables a program to execute a
-                    SQL {\bf select} and receive a {\em result set}.  Using source code
-                    statements when appropriate, define the terms prepared statement and
-                    result set.
+                  \item ({\bf 3 Points}) The Java database connectivity (JDBC) interface furnishes the ability to create
+                    and submit a {\em prepared statement}.  Furthermore, JDBC also enables a program to execute a SQL
+                    {\bf select} and receive a {\em result set}.  Using source code statements when appropriate, define
+                    the terms prepared statement and result set. Then, explain the security challenge(s) associated with
+                    using prepared statements in Java programs to interact with a relational database.
 
-                    %% \item ({\bf 3 Points}) What is authentication?  Authorization?
-                    %%   How does the structured query language support these two types
-                    %%   of security features?
+                  \item ({\bf 2 Points}) The structured query language provides features that support both
+                    authentication and authorization. What is the meaning of each of these \mbox{two terms}?
 
+                  \item ({\bf 2 Points}) The Java programming language supports the serialization of objects using
+                    either a binary or XML-based storage mechanism. After explaining how these two methods work, please
+                    state which one is more secure and explain why.
                     \end{enumerate}
 
                 \end{enumerate}
