Adding in content from the html. Updating the first two sections.

--- a/labs/labfp/cs380F2014-fp.tex
+++ b/labs/labfp/cs380F2014-fp.tex
@@ -1,29 +1,40 @@
-%!TEX root=cs440S2014-fp.tex 
-% mainfile: cs440S2014-fp.tex 
+%!TEX root=cs380F2014-fp.tex 
+% mainfile: cs380F2014-fp.tex 
 
 \input{labspre.tex}
 
 \usepackage[compact]{titlesec}
 
-\begin{document} \MYTITLE{Final Project: Advanced Topics in Operating Systems} 
-\MYHEADERS{Final Project}{Due: Thursday, May 1, 2014 at 7:00 pm}
+\begin{document} \MYTITLE{Final Project: Advanced Topics in Data Management} 
+\MYHEADERS{Final Project}{Due: Friday, December 12, 2014 at 5:00 pm}
 
 % \vspace*{-.32in}
 
 \section*{Introduction}
 
-Throughout the semester, you have learned more about the basics of operating systems by studying, in a hands-on fashion,
-topics such as file systems, process scheduling, and memory management.  This final project invites you to explore, in
-greater detail, an advanced topic in the field of operating systems. Working in teams of four students each, you will
-learn more about how to implement, evaluate, and/or simulate key components or facets of an operating system. You will
-also write and speak about different topics in operating systems.  Finally, you will gain additional experience in
-collaboratively working on a team to complete a large-scale project.
+Throughout the semester, you have learned more about the basics of data management by studying, in a hands-on fashion,
+topics such as the use of the structured query language, the implementation of database applications, and the creation
+and parsing of XML files.  This final project invites you to explore, in greater detail, an advanced topic in the field
+of databases. You will learn more about how to implement, evaluate, and/or simulate key components or aspects of a
+database. 
+
+The student must write a report that will consist of eight to ten pages of material.  Ideally, the report should be
+formatted with the LaTeX text processing language and be suitable for publication in a conference or workshop.  The
+report should include a description of why the topical area is important and discuss the implementation and
+experimentation that was undertaken.  The written material should be precise, formal, appropriately formatted,
+grammatically correct, informative, and interesting.  The student should pay careful attention to developing a useful
+bibliography and citing these references at the appropriate point in the written work.  The source code that you write
+must be carefully documented and tested.  If a student installs and uses a data management framework, the installation
+and usage steps should be clearly documented. The student is entirely responsible for ensuring the feasibility of their
+final project.  Finally, you must prepare a short presentation, consisting of approximately ten slides, that explains
+the important contributions of and results from your final project.
 
 \section*{Description of the Topics}
 
-The student-chosen teams of four students are invited to pick one of the following ten projects.  Please note that a
-team selecting the team-designed project must first discuss their idea with the instructor and receive feedback and
-then final approval.   
+Each member of the class is invited to pick one of the following projects.  Please note that an individual selecting the
+student-designed project must first discuss their idea with the instructor, during today's laboratory session, and
+receive feedback and then final approval.  Please note that you are responsible for ensuring the feasibility of the
+project that you propose.
 
 \begin{enumerate}
 
