--- a/labs/labfp/cs380F2014-fp.tex
+++ b/labs/labfp/cs380F2014-fp.tex
@@ -18,16 +18,12 @@ and parsing of XML files.  This final project invites you to explore, in greater
 of databases. You will learn more about how to implement, evaluate, and/or simulate key components or aspects of a
 database. 
 
-The student must write a report that will consist of eight to ten pages of material.  Ideally, the report should be
-formatted with the LaTeX text processing language and be suitable for publication in a conference or workshop.  The
-report should include a description of why the topical area is important and discuss the implementation and
-experimentation that was undertaken.  The written material should be precise, formal, appropriately formatted,
-grammatically correct, informative, and interesting.  The student should pay careful attention to developing a useful
-bibliography and citing these references at the appropriate point in the written work.  The source code that you write
-must be carefully documented and tested.  If a student installs and uses a data management framework, the installation
-and usage steps should be clearly documented. The student is entirely responsible for ensuring the feasibility of their
-final project.  Finally, you must prepare a short presentation, consisting of approximately ten slides, that explains
-the important contributions of and results from your final project.
+Your project should result in a detailed report that is, ideally, formatted with the \LaTeX\ text processing language
+and suitable for publication in a conference or workshop.  The report should include a description of why the chosen
+topic is important and discuss the implementation and experimentation that you undertook.  The written material should
+be precise, formal, appropriately formatted, grammatically correct, informative, and interesting.  The source code that
+you write must be carefully documented and tested.  If you install and use a data management framework, the installation
+and usage steps should be clearly documented. 
 
 \section*{Description of the Topics}
 
