Adding the first project idea in the correct format.

--- a/labs/labfp/cs380F2014-fp.tex
+++ b/labs/labfp/cs380F2014-fp.tex
@@ -22,8 +22,8 @@ Your project should result in a detailed report that is, ideally, formatted with
 and suitable for publication in a conference or workshop.  The report should include a description of why the chosen
 topic is important and discuss the implementation and experimentation that you undertook.  The written material should
 be precise, formal, appropriately formatted, grammatically correct, informative, and interesting.  The source code that
-you write must be carefully documented and tested.  If you install and use a data management framework, the installation
-and usage steps should be clearly documented. 
+you write must be carefully documented and tested.  If you install and use a data management framework, the steps for
+installation and use should be clearly documented. 
 
 \section*{Description of the Topics}
 
@@ -34,44 +34,19 @@ project that you propose.
 
 \begin{enumerate}
 
-  \item {\bf Simulation of Operating Systems}: You and your team members will pick a specific component or algorithm
-    in an operating system, such as the cache manager, process scheduler, or page replacement algorithm, and implement
-    a full-featured simulation of it.  Then, you will use the simulator to investigate the characteristics and
-    trade-offs of operating systems.
+  \item {\bf Evaluating the Performance of Relational Databases}: Use and/or extend systems like PolePosition,
+    Database-Benchmark, or HammerDB to measure the performance of different relational databases.  This project would
+    consider both in-memory databases like HSQLDB and standard databases like SQLite.  Students who select this project
+    may also implement their own performance benchmarks for relational databases.  The benchmarks and
+    the empirical study should, if possible, consider both the time and space overhead of the database.
 
-  \item {\bf File System Performance Evaluation}: You and your team members will use one or more file system
-    benchmarking tools to evaluate the performance of different combinations of file systems and disks.  After deciding
-    which benchmarking systems you will use, you will configure the benchmarks, run experiments, and report on the
-    results.
 
-  \item {\bf Benchmarking the Linux Operating System}: You and your team members will use one or more benchmarking tools
-    for the Linux operating system to evaluate the performance of different aspects of a computer workstation running
-    Linux.  After picking the aspects of Linux system performance that you will study and selecting the right
-    benchmarks, you will configure the system, run the experiments, and report on the results.
 
-  \item {\bf Remote Communication}: You and your team members will implement, test, document, evaluate, and
-    demonstrate a complete software system that performs some type of remote communication.  Teams that select this
-    project should consider using techniques like sockets and remote procedure calls to implement a program that solves
-    a challenging problem.
 
-  \item {\bf Cloud Computing}: You and your team members will use existing cloud-computing frameworks, such as OwnCloud,
-    to install, configure, test, evaluate, document, deploy, and demonstrate a fully functional cloud-computing solution
-    to be used by students and faculty in the Department of Computer Science. Although it will be exclusively accessible
-    to people at Allegheny College, the completed system should be similar to Ubuntu One.
 
-  \item {\bf Cluster Computing}: Using your own computer hardware, or hardware provided by the department's systems
-    administrator, you and your team will build your own cluster computer.  After installing, configuring, testing,
-    documenting, and deploying your hardware and software, you should evaluate it through a series of performance
-    studies and report on your results.
 
-  \item {\bf Virtual Machines}: You and your team will investigate the installation and use of virtual machines on
-    operating systems such as Windows, Linux, and Mac OSX.  Beyond downloading, installing, and configuring one or more
-    virtualization environments, the team members should either pick a type of problem that they want to solve with
-    virtualization or a performance characterization of virtualization that they would like to conduct.  
 
-  \item {\bf Student-Design Project}: You and your team will develop an idea for your own project that focuses on
-    advanced topics in operating systems. After receiving the instructor's approval for your idea, you will complete the
-    project and report on your results.
+
     
 \end{enumerate} 
 
