--- a/labs/labfp/cs380F2014-fp.tex
+++ b/labs/labfp/cs380F2014-fp.tex
@@ -20,17 +20,17 @@ database.
 
 Your project should result in a detailed report that is, ideally, formatted with the \LaTeX\ text processing language
 and suitable for publication in a conference or workshop.  The report should include a description of why the chosen
-topic is important and discuss the implementation and experimentation that you undertook.  The written material should
-be precise, formal, appropriately formatted, grammatically correct, informative, and interesting.  The source code that
-you write must be carefully documented and tested.  If you install and use a data management framework, the steps for
-installation and use should be clearly documented. 
+topic is important and discuss the implementation and/or experimentation that you undertook.  The written material
+should be precise, formal, appropriately formatted, grammatically correct, informative, and interesting.  The source
+code that you write must be carefully documented and tested.  If you install and use a data management framework, the
+steps for installation and use should be clearly documented. 
 
 \section*{Description of the Topics}
 
 Each member of the class is invited to pick one of the following projects.  Please note that an individual selecting the
 student-designed project must first discuss their idea with the instructor, during today's laboratory session, and
-receive feedback and then final approval.  Please note that you are responsible for ensuring the feasibility of the
-project that you propose.
+receive feedback and then final approval.  Please note that you are fully responsible for ensuring the feasibility of
+the project that you propose.
 
 \begin{enumerate}
 
@@ -60,7 +60,10 @@ project that you propose.
     state machines the tool produces.  As part of this project, you will be required to download and install Java
     database applications that use both strings and JDBC.  
 
-
+  \item {\bf XML Applications with DOM and SAX}: Learn how to write Java programs with simple API for XML (SAX) or
+    document object model (DOM) parsers and then implement and test at least one case study application that use these
+    different XML processing techniques.  Students who pick this project should study how the use of different XML
+    parsers influences your implementation progress and the overall performance of your application.  
 
 
     
