Adding in more details for the project.

--- a/labs/labfp/cs380F2014-fp.tex
+++ b/labs/labfp/cs380F2014-fp.tex
@@ -65,11 +65,21 @@ the project that you propose.
     different XML processing techniques.  Students who pick this project should study how the use of different XML
     parsers influences your implementation progress and the overall performance of your application.  
 
+  \item {\bf Using and Evaluating XML Compression Algorithms}: As part of this project, you will download and install
+    several XML compression tools.  After installing these tools and ensuring that they work properly, you will
+    implement a benchmarking framework that measures the efficiency and effectiveness of the compression and
+    decompression routines.  Students may consider evaluating techniques such as XMLPPM and XMill. If you pick this
+    project, then you must allocate time to read the literature about XML compression and consult the XMLCompBench,
+    available from SourceForge.  Students who select this project should also incorporate standard compression
+    techniques like those found in GZip, BZip, and Zip.
 
+  \item {\bf Using XML for Data Interchange}: Use XML to enable two different applications to exchange data in a
+    seamless fashion.  For example, you might implement or find a C++ program that uses its own proprietary
+    representation to store data.  After learning about this system and its internal representation, you should enhance
+    it to output XML that can be read by a Java program using tools like XStream, SAX, or DOM.  As part of this project,
+    you will conduct a series of detailed experiments to measure the performance of the data interchange.  
     
 \end{enumerate} 
-
-
 
 \section*{Final Project Deadlines}
 
