Finished a full draft of all of the final project ideas.

--- a/labs/labfp/cs380F2014-fp.tex
+++ b/labs/labfp/cs380F2014-fp.tex
@@ -78,7 +78,62 @@ the project that you propose.
     representation to store data.  After learning about this system and its internal representation, you should enhance
     it to output XML that can be read by a Java program using tools like XStream, SAX, or DOM.  As part of this project,
     you will conduct a series of detailed experiments to measure the performance of the data interchange.  
+
+  \item {\bf Data Caching for Improved Scalability}: Download, install, use, and empirically evaluate the performance of
+    a data caching system like Ehcache.  Implement a benchmarking framework that will allow you to measure the
+    performance and scalability of data caching techniques as they execute by themselves and/or in conjunction with a
+    relational database management system.  After implementing the benchmarks, students who pick this project must use
+    the framework to conduct experiments and then analyze and write-up their results.  
+
+  \item {\bf Query Languages for Java Heaps}: Investigate the use of tools like Java objects SQL (JOSQL) and the Java
+    Query Language (JQL).  Install and configure these libraries and then design one or more case study applications
+    that use queries to traverse the heap of the Java virtual machine (JVM).  You should also conduct experiments to
+    measure the performance of these different query engines and any competitive hand-coded traversal techniques.
+    Students who pick this project must clearly demonstrate that they have substantially extended the laboratory
+    assignment that they previously completed. 
     
+  \item {\bf Integrating Programming Languages and Databases}: Many stand-alone applications and programming languages
+    now contain new interfaces that support database interaction.  For example, the R programming language includes
+    features that enable the interaction with both XML files and relational databases.  As part of this project, you
+    could store a complex data set in, for instance, a SQLite database and then import the results into R.  At this
+    point, you should use R's facilities to perform a statistical analysis of the data and visualize the results.
+    Whenever possible, your data import, statistical analysis, and visualization methods should be fully automated. This
+    project will result in a report that highlights the trends in a data set and explains the source code that leads to
+    these conclusions.
+
+  \item {\bf Data Visualization and Analysis}: Researchers and developers in both industry and academia commonly produce
+    large data sets.  In this project, you will implement efficient data analysis routines that can visualize and
+    analyze these result sets.  For example, students may conduct experiments to collect data and then use the R
+    programming language and packages such as lattice, ggplot2, and dplyr to construct high-quality visualizations and
+    statistical analyses.  Instead of conducting experiments to collect data sets, students may also use one or more of
+    the data sets that are available from the UC Irvine Machine Learning Repository.  Like the previous project, this
+    one will also result in a report that highlights the trends in a data set and explains the source code that leads to
+    these conclusions.
+
+  \item {\bf Machine Learning and Data Mining}: After selecting one or more data sets---again, from sites like the UC
+    Irvine Machine Learning Repository---you will download, install, and configure several machine learning algorithms
+    in order to perform automated and interactive data mining.  Students who select this project may either decide to
+    implement their own algorithms or use those that are provided in Weka or the R programming language.  Students who
+    elect to use R should also consider using Rattle, a graphical user interface for data mining with R.  If you pick
+    this project, you must investigate and cite text books and research papers that explain the specifics of different
+    machine learning algorithms.  Your project should include a report that explains the design and analysis of
+    experiments that you conduct to compare the efficiency and effectiveness of the machine learning algorithms.  
+
+  \item {\bf File System Integrity and Stable Storage}: As part of this project, you will investigate one or more tools
+    that assist during the maintenance of file system integrity in the stable storage of a data management system.  For
+    instance, you may decide to download, install, and use a tool such as the Reed-Solomon file shielder created by
+    Thanassis Tsiodras.  After learning more about how this tool works, you should implement benchmarks and conduct
+    experiments to evaluate its performance on a wide variety of files and file system structures.  
+
+  \item {\bf Implementing a Database Management System}: Figure 1.8 of your textbook gives a simplified overview of the
+    architecture of a database management system (DBMS). This project invites students to follow this diagram to
+    implement a simple DBMS that can process a subset of the structured query language. After implementing and testing
+    your DBMS, you demonstrate its features and run some benchmarks to evaluate its performance.
+
+  \item {\bf Student-Designed Project}: You will develop an idea for your own project that focuses on one or more
+    advanced topics in data management. After receiving the course instructor's approval for your idea, you will
+    complete the project and report on your results.
+
 \end{enumerate} 
 
 \section*{Final Project Deadlines}
